Closed Bug 414903 Opened 18 years ago Closed 18 years ago

Cannot use arrow keys and function keys at using IME

Categories

(Core :: Widget: Cocoa, defect, P1)

x86
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla1.9beta3

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: inputmethod, jp-critical, regression)

Attachments

(1 file)

Attached patch Patch rv1.0Splinter Review
This is a regression of bug 376077. We cannot use arrow keys and function keys when we are using IME. It's critical. This regression must not be in beta3.
Flags: blocking1.9?
Attachment #300418 - Flags: review?(joshmoz)
Attachment #300418 - Flags: review?(joshmoz) → review+
Attachment #300418 - Flags: superreview?(roc)
Flags: blocking1.9? → blocking1.9+
Priority: -- → P1
Attachment #300418 - Flags: superreview?(roc) → superreview+
Comment on attachment 300418 [details] [diff] [review] Patch rv1.0 a=beltzner for beta 3
Attachment #300418 - Flags: approval1.9b3+
checked-in, thanks!
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: