Bug 414903 Cannot use arrow keys and function keys at using IME r=josh, sr=roc, a1.9b3=beltzner